--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -2,7 +2,7 @@ name: 'Automatic build'
 on:
   push:
     branches:
-      - github_page
+      - master
     paths-ignore:
       - .gitignore
       - README.md
