--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
-baseurl: ''
+baseurl: '/an280420.github.io'
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -20,7 +20,7 @@ timezone: Asia/Yekaterinburg
 
 title: Learn Ruby                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Небольшие и большие заметки, которые могут помочь при изучении Ruby on Rails   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal bloq
